--- a/public/GM.html
+++ b/public/GM.html
@@ -64,7 +64,7 @@
 
 
 
-      <div action="/remove" method="post" >
+      <div> <!action="/remove" method="post" >
         <input type="text" id="Gdelete" name="Gdelete" placeholder="enter ID">
         <input type="submit" value="Delete" id="delete">
       </div>
