--- a/public/GM.html
+++ b/public/GM.html
@@ -77,7 +77,7 @@
           $.ajax({
               type:"post",
               url:"/remove",
-              data:{name:dname}
+              data:{name:dname},
               success:function(data){
                   if(data.status==0){
                       alert("delete success!");
