--- a/public/GM.html
+++ b/public/GM.html
@@ -83,7 +83,7 @@
                       alert("delete success!");
                   }
                   else{
-                    alert("delete fail");
+                    alert("this user does not exist");
                   }
               },
               error:function(){
