--- a/public/signup.html
+++ b/public/signup.html
@@ -71,7 +71,7 @@
         }
       },
       error:function(){
-        alert("Internet error!");
+        alert("insert error!");
       }
     })
   });
