--- a/public/signup.html
+++ b/public/signup.html
@@ -18,16 +18,18 @@
 
 
    <div><! action="/signup" method="post">
+   	  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label for="sid" >ID:</label>
       <input type="text" id="sid" placeholder="Enter User ID" name="sid"/><br>
-     
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label for="spassword">Password:</label>
       <input type="text" id="spassword" placeholder="Enter Password" name="spassword"/><br>
-
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label for="sname">Name:</label>
       <input type="text" id="sname" placeholder="Enter Your Name" name="sname"/><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-      <label for="sage">Age:</label>
+      <label for="sage">Age :</label>
       <input type="number" id="sage" placeholder="Enter Your Name" name="sage"/><br>
 
       <label for="squestion">Security Question:</label>
