--- a/public/modify.html
+++ b/public/modify.html
@@ -17,7 +17,7 @@
     <div id="mmodify">
     <h1>Modify</h1>
     <h2 >Personal Information</h2>
-
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label>ID: <label id="mid"></label> </label><br>
 
     <script>
@@ -41,12 +41,13 @@
     </script>
 
     <div><!action="/modify" method= "post" >
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mpassword">Password:</label>
         <input type="text" id="mpassword" placeholder="Enter New Password" name="mpassword" /><br>
-
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mname">Name:</label>
         <input type="text" id="mname" placeholder="Enter Your Name" name="mname" /><br>
-
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mage">Age:</label>
         <input type="number" id="mage" placeholder="Enter Your age" name="mage" /><br>
 
