--- a/public/modify.html
+++ b/public/modify.html
@@ -43,15 +43,19 @@
     <div><!action="/modify" method= "post" >
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mpassword">Password:</label>
+        &nbsp;
         <input type="text" id="mpassword" placeholder="Enter New Password" name="mpassword" /><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="mname">Name:</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <label for="mname">Name :</label>
+        &nbsp;
         <input type="text" id="mname" placeholder="Enter Your Name" name="mname" /><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="mage">Age:</label>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <label for="mage">Age :</label>
+        &nbsp;
         <input type="number" id="mage" placeholder="Enter Your age" name="mage" /><br>
 
         <label for="mquestion">Security Question:</label>
+        &nbsp;
         <select name="mquestion" id="mquestion">
             <option value="0">Select</option>
             <option value="1">What is your mother's name?</option>
@@ -63,6 +67,7 @@
         </select><br>
 
         <label for="manswer">Question Answer :</label>
+        &nbsp;
         <input type="text" id="manswer" placeholder="Enter Your Answer" name="manswer"><br>
         
         <input type="submit" value="modify" id="mbutton" >
