--- a/public/homepage.html
+++ b/public/homepage.html
@@ -41,9 +41,6 @@
 
 </script>
 
-
-
-
 <table id="rankingbackground">
 </table>
 <!-- need js to put back  -->
@@ -92,9 +89,19 @@
 
 <button id="game" class="float-left submit-button" >Game</button>
 
+
+
+
 <script type="text/javascript">
     document.getElementById("game").onclick = function () {
-        location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
+        //location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
+
+        var socket = io();
+        var el = document.getElementById('game');
+        socket.on('time', function(timeString) {
+          el.innerHTML = 'Server time: ' + timeString;
+        });
+
     };
 </script>
 
