--- a/public/tmp.html
+++ b/public/tmp.html
@@ -23,7 +23,7 @@
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/tmp.js"></script>
+  <script src="tmp.js"></script>
 </body>
 </html>
 
