--- a/public/GM.html
+++ b/public/GM.html
@@ -43,7 +43,7 @@
 
 
 
-      <div action="/search" method="post" >
+      <div action="/search" method="post" id="GS">
         <input type="text" id="search_cri" name="search_cri" placeholder="enter ID">
         <input type="submit" value="Search" id="gsearch" name="gsearch">
       </div>
