fixing modify,added extra res.json

--- a/public/modify.html
+++ b/public/modify.html
@@ -40,7 +40,7 @@
 
     </script>
 
-    <div><!action="/modify" method= "post" >
+    <div> 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <label for="mpassword">Password:</label>
         &nbsp;
