--- a/public/choose.html
+++ b/public/choose.html
@@ -88,15 +88,15 @@
 	<script type="text/javascript">
 		function game(n){
 			if(n=="water"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/water/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/water/game.html";
 			}else if(n=="electric"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/electric/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/electric/game.html";
 			}else if(n=="grass"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/grass/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/grass/game.html";
 			}else if(n=="fire"){
-				location.href = "https://stark-spire-21434.herokuapp.com/game/fire/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/fire/game.html";
 			}else{
-				location.href = "https://stark-spire-21434.herokuapp.com/game/eevee/index.html";
+				location.href = "https://stark-spire-21434.herokuapp.com/game/eevee/game.html";
 			}
 		}
 	</script>
