--- a/public/game.html
+++ b/public/game.html
@@ -148,6 +148,24 @@
 			$("#box").show();
 			document.getElementById("steps").innerHTML=count;
 		}
+		$("#upload").click(function(){
+			var one_steps=$("#steps").val();
+			$.ajax({
+        		type:"post",
+        		url:"/ranking",
+        		data:{one_steps:one_steps},
+        		success:function(data){
+            		if(data.status==-1){
+            			alert("ranking Fail!");
+            		}else{
+            			alert("ranking success!");
+            		}
+        		},
+        		error:function(){
+            		alert("Internet Error");
+        		}
+    		})
+		})
 	</script>
 	<div id="box" class="white_content" align="left" valign="middle">
 		<center>
@@ -156,6 +174,7 @@
 			<p>Your steps is: </p>
 			<p id="steps">0</p>
 			<button id="restart" onclick="restart();shuffle_poke()">Restart</a>
+			<input type="submit" value="upload_grade" id="upload">
 		</center>
 	</div>
 
