--- a/public/game.html
+++ b/public/game.html
@@ -173,8 +173,8 @@
 			<br></br>
 			<p>Your steps is: </p>
 			<p id="steps">0</p>
-			<button id="restart" onclick="restart();shuffle_poke()">Restart</a>
-			<input type="submit" value="upload_grade" id="upload">
+			<button id="restart" onclick="restart();shuffle_poke()">Restart</button>
+			<button id="upload">UploadGrade</button>
 		</center>
 	</div>
 
