--- a/public/game.html
+++ b/public/game.html
@@ -174,7 +174,7 @@
 			<p>Your steps is: </p>
 			<p id="steps">0</p>
 			<button id="restart" onclick="restart();shuffle_poke()">Restart</button>
-			<button id="upload">UploadGrade</button>
+			<input type="submit" id="upload">UploadGrade</button>
 		</center>
 	</div>
 
