--- a/public/tmp.html
+++ b/public/tmp.html
@@ -19,14 +19,14 @@
 
 
 
-    <li class="login page">
+<!--     <li class="login page">
       <div class="form">
         <h3 class="title">What's your nickname?</h3>
         <input class="usernameInput" type="text" maxlength="14" />
       </div>
     </li>
 
-
+ -->
 
   </ul>
 
