--- a/public/tmp.html
+++ b/public/tmp.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="tmp.css">
+  <link rel = "icon" href="data:,">
+
 </head>
 <body>
   <ul class="pages">
