--- a/public/homepage.html
+++ b/public/homepage.html
@@ -80,7 +80,7 @@
         <td id="w5">45</td>
     </tr>
 </table>
-<script type="text/javascript">
+<script>
     $.ajax({
         type:"get",
         url:"/rankinglist",
@@ -110,7 +110,6 @@
 
                 }
             }
-
             else{
                 alert("Ranking fail!");
             }
