--- a/public/homepage.html
+++ b/public/homepage.html
@@ -100,7 +100,9 @@
                     var td2=document.createElement("td");
                     //var td3=document.createElement("td");
 
-                    td0.innerHTML="No."+i+1;
+                    var count;
+                    count=i+1;
+                    td0.innerHTML="No."+count;
                     td1.innerHTML=data.list[i].userid;
                     td2.innerHTML=data.list[i].one_steps;
                     //td3.innerHTML=data.list[i].two_steps;
