--- a/public/tmp.html
+++ b/public/tmp.html
@@ -29,13 +29,14 @@
   <script src="/tmp.js"></script>
 
   <script>
-  $(document).ready(function(){
-    e = jQuery.Event("keypress")
-    e.which = 13 //choose the one you want
-        $("#test").keypress(function(){
-         alert('keypress triggered')
-        }).trigger(e)
-  })
+    function enterfunc() {     
+      e = jQuery.Event("keypress")
+      e.which = 13 //choose the one you want
+          $("#test").keypress(function(){
+           alert('keypress triggered')
+          }).trigger(e)
+   }
+    setTimeout(enterfunc, 1000)
   </script>
 
 </body>
