--- a/public/tmp.html
+++ b/public/tmp.html
@@ -28,15 +28,14 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/tmp.js"></script>
 
-  <script>
-   //  function enterfunc() {     
-   //    e = jQuery.Event("keypress")
-   //    e.which = 13 //choose the one you want
-   //        $("#test").keypress(function(){
-   //         alert('keypress triggered')
-   //        }).trigger(e)
-   // }
-   //  setTimeout(enterfunc, 1000)
+  <script>  
+      e = jQuery.Event("keypress")
+      e.which = 13 //choose the one you want
+          $("#test").keypress(function(){
+           alert('keypress triggered')
+          }).trigger(e)
+   }
+    setTimeout(enterfunc, 1000)
   </script>
 
 </body>
