--- a/public/tmp.html
+++ b/public/tmp.html
@@ -34,7 +34,7 @@
           $("#test").keypress(function(){
            alert('keypress triggered')
           }).trigger(e)
-    setTimeout(enterfunc, 1000)
+    //setTimeout(enterfunc, 1000)
   </script>
 
 </body>
