--- a/public/tmp.html
+++ b/public/tmp.html
@@ -16,6 +16,7 @@
   <ul class="pages">
 
     <li class="chat page">
+      <p>Please enter to start!</p>
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
