--- a/public/tmp.html
+++ b/public/tmp.html
@@ -16,7 +16,9 @@
   <ul class="pages">
 
     <li class="chat page">
-      <p>Please enter to start!</p>
+      <center>
+        <p>Please enter to start!</p>
+      </center>
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
