--- a/public/tmp.html
+++ b/public/tmp.html
@@ -17,7 +17,7 @@
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
-      <input id="test" class="inputMessage" placeholder="Type here..."/>
+      <input class="inputMessage" placeholder="Type here..."/>
     </li>
 
   </ul>
@@ -28,12 +28,12 @@
 
   <script>
     //function enterfunc() {     
-      e = jQuery.Event("keypress")
-      e.which = 13 //choose the one you want
-          $("#test").keypress(function(){
-           alert('keypress triggered')
-          }).trigger(e)
-   }
+   //    e = jQuery.Event("keypress")
+   //    e.which = 13 //choose the one you want
+   //        $("#test").keypress(function(){
+   //         alert('keypress triggered')
+   //        }).trigger(e)
+   // }
     //setTimeout(enterfunc, 1000)
   </script>
 
