--- a/public/tmp.html
+++ b/public/tmp.html
@@ -12,7 +12,7 @@
 
     <li class="chat page">
       <center>
-        <p>Please enter to start!</p>
+        <p>Please press enter to join chat!</p>
       </center>
       <div class="chatArea">
         <ul class="messages"></ul>
