--- a/public/homepage.html
+++ b/public/homepage.html
@@ -134,7 +134,8 @@
 
 <button id="poke" class="float-left submit-button" >Poke</button>
 <button id="chat" class="float-left submit-button" >public chatroom</button>
-<button id="game" class="float-left submit-button" >Game</button>
+<button id="game" class="float-left submit-button" >Solo Game</button>
+<button id="game2" class="float-left submit-button" >2 player Game</button>
 
 
 <script type="text/javascript">
@@ -147,6 +148,10 @@
     document.getElementById("game").onclick = function () {
         // location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
         location.href = "https://stark-spire-21434.herokuapp.com/game.html";
+    };
+    document.getElementById("game2").onclick = function () {
+        // location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
+        location.href = "https://stark-spire-21434.herokuapp.com/game2.html";
     };
 </script>
 
