ready to work on 2 player

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -42,9 +42,6 @@
 
 </script>
 
-
-
-
 <table id="rankingbackground">
 </table>
 <!-- need js to put back  -->
@@ -133,9 +130,9 @@
 </script>
 
 <button id="poke" class="float-left submit-button" >Poke</button>
-<button id="chat" class="float-left submit-button" >public chatroom</button>
-<button id="game" class="float-left submit-button" >Solo Game</button>
-<button id="game2" class="float-left submit-button" >2 player Game</button>
+<button id="chat" class="float-left submit-button" >Chat</button>
+<button id="game" class="float-left submit-button" >Solo</button>
+<button id="game2" class="float-left submit-button" >Coop</button>
 
 
 <script type="text/javascript">
@@ -162,6 +159,9 @@
 
 <table id="myownbackground">    
 </table>
+
+
+
 <table id="myown">
     <tr>
         <td width="30%" id="rm">No.15</td>
@@ -170,14 +170,6 @@
     </tr>
 </table>
 
-<!--<form action="/rank check" method="post" >
-<input type="submit" value="update" />
-</form>-->
-
-
-
-
-
 <button id="account" class="float-left submit-button" >Info</button>
 
 <script type="text/javascript">
@@ -185,11 +177,6 @@
         location.href = "https://stark-spire-21434.herokuapp.com/modify.html";
     };
 </script>
-
-
-
-
-
 
 <input type="button" value="logout"  class="float-left submit-button" id="logout" > 
 
@@ -211,9 +198,6 @@
     }); 
 
 </script>
-
-
-
 
 <input type="button" onClick="msgbox(1)" value="rule" id="Hrule">
 <div id='inputbox' class="box">
