--- a/public/tmp.html
+++ b/public/tmp.html
@@ -4,47 +4,41 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <link rel="stylesheet" href="tmp.css">
+  <link rel = "icon" href="data:,">
+
 </head>
 <body>
   <ul class="pages">
+
     <li class="chat page">
+      <center>
+        <p>Please press enter to join chat!</p>
+      </center>
       <div class="chatArea">
         <ul class="messages"></ul>
       </div>
       <input class="inputMessage" placeholder="Type here..."/>
     </li>
 
-    
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">What's your nickname?</h3>
-        <input class="usernameInput" type="text" maxlength="14" />
-      </div>
-    </li>
   </ul>
 
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/tmp.js"></script>
 
+  <script>
+    //function enterfunc() {     
+   //    e = jQuery.Event("keypress")
+   //    e.which = 13 //choose the one you want
+   //        $("#test").keypress(function(){
+   //         alert('keypress triggered')
+   //        }).trigger(e)
+   // }
+    //setTimeout(enterfunc, 1000)
+  </script>
 
-  <script src="tmp.js"></script>
-
-
-  
 </body>
 </html>
 
 
-<!-- <html>
-  <body>
-    <p id='server-time'></p>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      var el = document.getElementById('server-time');
-      socket.on('time', function(timeString) {
-        el.innerHTML = 'Server time: ' + timeString;
-      });
-    </script>
-  </body>
-</html> -->
+
