--- a/public/GM.html
+++ b/public/GM.html
@@ -38,6 +38,11 @@
   
   <div id="GGM">
       <h2>Manage players</h2>
+
+
+
+
+
       <div action="/search" method="post" id="GS">
         <input type="text" id="search_cri" name="search_cri" placeholder="enter ID">
         <input type="submit" value="Search" id="gsearch" name="gsearch">
@@ -45,9 +50,9 @@
       <div>
         <table id="userlist">
             <tr>
-              <th>ID</th>
-              <th>Name</th>
-              <th>Age</th>
+              <td>ID</th>
+              <td>Name</th>
+              <td>Age</th>
             </tr>
 <!--               <th id ="user">none1</th>
               <th id = "pass">none2</th>
@@ -57,7 +62,10 @@
       </div>
       <br></br>
       <h2>Delete player by ID</h2>
-      <div>
+
+
+
+      <div> <!action="/remove" method="post" >
         <input type="text" id="Gdelete" name="Gdelete" placeholder="enter ID">
         <input type="submit" value="Delete" id="delete">
       </div>
@@ -129,7 +137,7 @@
                       //$("#user").html=user1;
                       var table=document.getElementById('userlist');
                       var size=table.rows.length;
-                      for(i=1;i<size;i++){
+                      for(i=0;i<size;i++){
                         table.deleteRow(i);
                         size=size-1;
                         i=i-1;
@@ -151,7 +159,7 @@
 
                         table.appendChild(tr);
                       }
-                      //document.getElementById("user").innerHTML=data.list[0].user;
+                      document.getElementById("user").innerHTML=data.list[0].user;
                       
                       //alert("search success!");
                     }
@@ -166,5 +174,11 @@
             })
         });
     </script>
+
+
+
+
+
+
   </body>
 </html>
