--- a/public/game.html
+++ b/public/game.html
@@ -22,6 +22,9 @@
                 	var user="";
                 	user+=data.user;
                 	$("h1").html(user);
+                	var msg="";
+                	msg+=data.msg;
+                	$("p1").html(msg);
             		}
         		},
         	error:function(){
@@ -65,23 +68,6 @@
 
 	<br></br>
 
-	<div id="choose">
-		<table id="table1" align="center" valign="middle">
-			<tr>
-				<td><div id="squirtle" onclick ="game('water')"></div></td>
-				<td><div id="pikachu" onclick ="game('electric')"></div></td>
-				<td><div id="bulbasaur" onclick ="game('grass')"></div></td>
-			</tr>
-		</table>
-		<table id="table2" align="center" valign="middle">
-			<tr>
-				<td></td>
-				<td><div id="charmander" onclick ="game('fire')"></div></td>
-				<td><div id="eevee" onclick ="game('eevee')"></div></td>
-			</tr>
-		</table>
-	</div>
-
 	<table id="table" align="center" valign="middle">
 		<tr>
 			<td><p><img href = "javascript:void(0)"  id="location0" align="bottom" width="90%" height="200%" onclick="poker(0)"/></p></td>
@@ -108,96 +94,70 @@
 			<td><p><img href = "javascript:void(0)"  id="location17" align="bottom" width="90%" height="200%" onclick="poker(17)"></p></td>
 		</tr>
 	</table>
-
+	<p id="demo">ff</p>
+    <script language="javascript">
+		var poke=[1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10];
+		var number=Math.ceil(Math.random()*10);
+		document.getElementById("demo").innerHTML=number;
+		poke.splice((number-1)*2,2);
+		var flag=false;
+		var oneid=-1;
+		var count=0;
+		function poker(id){
+			count++;
+			if(poke[id]==-1){
+				return;
+			}
+			document.getElementById("location"+id).src="images/eevee/card"+poke[id]+".jpg";
+			if(flag){
+				if(poke[id]==poke[oneid]){
+					poke[id]=-1;
+					poke[oneid]=-1;
+				}
+				else{
+					setTimeout("fail("+id+","+oneid+")",600);
+				}
+				oneid=-1;
+				flag=false;
+			}
+			else{
+				oneid=id;
+				flag=true;
+			}
+			check_success();
+		}
+		function shuffle_poke(){
+			for(var i=0;i<18;i++){
+				document.getElementById("location"+i).src="images/cardbg.png";
+			}
+			for(var i=0;i<18;i++){
+                var a=Math.floor(Math.random()*18);
+                var b=Math.floor(Math.random()*18);
+                var temp=poke[a];
+                poke[a]=poke[b];
+                poke[b]=temp;
+			}
+		}
+		function fail(id, oneid){
+			document.getElementById("location"+id).src="images/cardbg.png";
+			document.getElementById("location"+oneid).src="images/cardbg.png";
+		}
+		function check_success(){
+			for(var i=0;i<18;i++){
+				if(poke[i]!=-1)
+					return;
+			}
+			$("#box").show();
+			document.getElementById("steps").innerHTML=count;
+		}
+	</script>
 	<div id="box" class="white_content" align="left" valign="middle">
 		<center>
 			<img src="images/Success.png" href = "javascript:void(0)"  id="success" align="bottom" width="70%">
 			<br></br>
 			<p>Your steps is: </p>
 			<p id="steps">0</p>
-			<button id="restart" onclick="restart();shuffle_poke()">Restart</button>
-			<input type="submit" id="upload" value="UploadGrade">
-		<script type="text/javascript">
-			var poke=[1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10];
-			var number=Math.ceil(Math.random()*10);
-			poke.splice((number-1)*2,2);
-			var flag=false;
-			var oneid=-1;
-			var count=0;
-			var a;
-			function game(type){
-				a=type;
-				$("#light").show();
-				$("#choose").hide();
-
-			}
-			function poker(id){
-				count++;
-				if(poke[id]==-1){
-					return;
-				}
-
-				document.getElementById("location"+id).src="images/"+a+"/card"+poke[id]+".jpg";
-				if(flag){
-					if(poke[id]==poke[oneid]){
-						poke[id]=-1;
-						poke[oneid]=-1;
-					}
-					else{
-						setTimeout("fail("+id+","+oneid+")",600);
-					}
-					oneid=-1;
-					flag=false;
-				}
-				else{
-					oneid=id;
-					flag=true;
-				}
-				check_success();
-			}
-			function shuffle_poke(){
-				for(var i=0;i<18;i++){
-					document.getElementById("location"+i).src="images/cardbg.png";
-				}
-				for(var i=0;i<18;i++){
-                	var a=Math.floor(Math.random()*18);
-                	var b=Math.floor(Math.random()*18);
-                	var temp=poke[a];
-                	poke[a]=poke[b];
-                	poke[b]=temp;
-				}
-			}
-			function fail(id, oneid){
-				document.getElementById("location"+id).src="images/cardbg.png";
-				document.getElementById("location"+oneid).src="images/cardbg.png";
-			}
-			function check_success(){
-				for(var i=0;i<18;i++){
-					if(poke[i]!=-1)
-						return;
-				}
-				$("#box").show();
-				document.getElementById("steps").innerHTML=count;
-			}
-			$("#upload").click(function(){
-				var one_steps=count;
-				$.ajax({
-        			type:"post",
-        			url:"/ranking",
-        			data:{one_steps:one_steps},
-        			success:function(data){
-            			if(data.status==-1){
-            				alert("ranking Fail!");
-            			}else{
-            			alert("ranking success!");
-            		}
-        		},
-        		error:function(){
-            		alert("Internet Error");
-        		}
-    		})
-		});
-			</script>
+			<button id="restart" onclick="restart();shuffle_poke()">Restart</a>
 		</center>
 	</div>
 
@@ -215,7 +175,7 @@
 		<button id="start" onclick="start();shuffle_poke()">Start</a>
 		<script>
 			//$("#box").show();
-			$("#light").hide();
+			$("#light").show();
 			function start(){
 				$("#light").hide(); 
 			}
