--- a/public/homepage.html
+++ b/public/homepage.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" href="homepage.css">
     <link rel = "icon" href="data:,">
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/tmp.js"></script>
 
 </head>
 
@@ -41,6 +39,9 @@
     });    
 
 </script>
+
+
+
 
 <table id="rankingbackground">
 </table>
@@ -79,76 +80,21 @@
         <td id="w5">45</td>
     </tr>
 </table>
-<script>
-    $.ajax({
-        type:"get",
-        url:"/rankinglist",
-        success:function(data){
-            if(data.status==0){
-                var table=document.getElementById('ranking');
-                var size=table.rows.length;
-                for(i=1;i<size;i++){
-                    table.deleteRow(i);
-                    size=size-1;
-                    i=i-1;
-                }
-                for(i=0;i<data.list.length;i++){
-                    var tr=document.createElement("tr");
-                    var td0=document.createElement("td");
-                    var td1=document.createElement("td");
-                    var td2=document.createElement("td");
-                    //var td3=document.createElement("td");
-
-                    var count;
-                    count=i+1;
-                    td0.innerHTML="No."+count;
-                    td1.innerHTML=data.list[i].userid;
-                    td2.innerHTML=data.list[i].one_steps;
-                    //td3.innerHTML=data.list[i].two_steps;
-
-                    tr.appendChild(td0);
-                    tr.appendChild(td1);
-                    tr.appendChild(td2);
-                    //tr.appendChild(td3);
-
-                    table.appendChild(tr);
-
-                }
-            }
-            else{
-                alert("Ranking fail!");
-            }
-           // var html="";
-           // html+=data.status;
-            //$("tbody").html(html);
-        },
-        error:function(){
-            alert("Internet Error");
-        }
-    });
-    
-</script>
 
 <button id="poke" class="float-left submit-button" >Poke</button>
-<button id="chat" class="float-left submit-button" >Chat</button>
-<button id="game" class="float-left submit-button" >Solo</button>
-<button id="game2" class="float-left submit-button" >Coop</button>
-
 
 <script type="text/javascript">
     document.getElementById("poke").onclick = function () {
         location.href = "https://stark-spire-21434.herokuapp.com/pokedex.html";
     };
-    document.getElementById("chat").onclick = function () {
-        location.href = "https://stark-spire-21434.herokuapp.com/tmp.html";
-    };
+</script>
+
+<button id="game" class="float-left submit-button" >Game</button>
+
+<script type="text/javascript">
     document.getElementById("game").onclick = function () {
         // location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
-        location.href = "https://stark-spire-21434.herokuapp.com/game.html";
-    };
-    document.getElementById("game2").onclick = function () {
-        // location.href = "https://stark-spire-21434.herokuapp.com/choose.html";
-        location.href = "https://stark-spire-21434.herokuapp.com/game2.html";
+        location.href = "https://stark-spire-21434.herokuapp.com/tmp.html";
     };
 </script>
 
@@ -159,9 +105,6 @@
 
 <table id="myownbackground">    
 </table>
-
-
-
 <table id="myown">
     <tr>
         <td width="30%" id="rm">No.15</td>
@@ -170,6 +113,14 @@
     </tr>
 </table>
 
+<!--<form action="/rank check" method="post" >
+<input type="submit" value="update" />
+</form>-->
+
+
+
+
+
 <button id="account" class="float-left submit-button" >Info</button>
 
 <script type="text/javascript">
@@ -177,6 +128,11 @@
         location.href = "https://stark-spire-21434.herokuapp.com/modify.html";
     };
 </script>
+
+
+
+
+
 
 <input type="button" value="logout"  class="float-left submit-button" id="logout" > 
 
@@ -199,6 +155,9 @@
 
 </script>
 
+
+
+
 <input type="button" onClick="msgbox(1)" value="rule" id="Hrule">
 <div id='inputbox' class="box">
     <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
@@ -215,6 +174,13 @@
         document.getElementById('inputbox').style.display=n?'block':'none';
     }
 </script>
+
+
+
+
+
+
+
 
 </body>
 </html>
