--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,7 @@
 
 
 
-   <div> 
+   <div><! action="/signup" method="post">
    	  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       <label for="sid" >ID:</label>
       &nbsp;
@@ -34,7 +34,7 @@
 
       <label for="sage">Age :</label>
       &nbsp;
-      <input type="number" id="sage" placeholder="Enter Your Age" name="sage"/><br>
+      <input type="number" id="sage" placeholder="Enter Your Name" name="sage"/><br>
 
       <label for="squestion">Security Question:</label>
       &nbsp;
