--- a/public/index.html
+++ b/public/index.html
@@ -44,19 +44,11 @@
 
 
     <div id="startpage" class="white_content" align="left" valign="middle">
-            Rule:
-            <br></br>
-            Players choose a pattern for the cards. Cards are all initialized face-down.
-            <br></br>
-            Each player takes turns flipping two cards face-up — if they are of the same, then that player wins the pair(the pair stays face-up) and gets another turn.
-            <br></br>
-            If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
-            <br></br>
-            The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
-            <br></br>
+            <div id="waiting"></div>
+            <div id="ready"></div>
             <button id="start" onclick="start()">Start</a>
             <script>
-                $("#startpage").show();
+                //$("#startpage").show();
                 function start(){
                     $("#startpage").hide(); 
                 }
