--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
             <div id="ready"></div>
             <button id="start" onclick="start()">Start</a>
             <script>
-                //$("#startpage").show();
+                $("#startpage").show();
                 function start(){
                     $("#startpage").hide(); 
                 }
