--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,14 @@
 
 
     <div id="startpage" class="white_content" align="left" valign="middle">
-            <div id="waiting"></div>
-            <div id="ready"></div>
-            <p>Game will start in <span id="mes">5</span> seconds！</p>
-            <script>
-                $("#startpage").show();       
-            </script> 
-        </div>
+        <div id="waiting"></div>
+        <div id="ready"></div>
+        <p id="5togoshow">Game will start in <span id="mes">5</span> seconds！</p>
+        <script>
+            $("#startpage").show();    
+            $("#5togoshow").hide();   
+        </script> 
+    </div>
 
         
     <script src="socket.io.js"></script>
