--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <div id="ready"></div>
         <p id="5togoshow">Game will start in <span id="mes">5</span> seconds！</p>
         <script>
-            //$("#startpage").show();    
+            $("#startpage").show();    
             $("#5togoshow").hide();   
         </script> 
     </div>
