--- a/public/1v1.html
+++ b/public/1v1.html
@@ -97,6 +97,7 @@
     
 
     <script src="socket.io.js"></script>
+    <script src="1v1game.js"></script>
     <script src="local.js"></script>
     <script src="remote.js"></script>
     <script src="script.js"></script>
